<resources>
    <string name="app_name">CtitLesson2</string>
    <string name="btn_welcome">welcome</string>
    <string name="menu_students">Students</string>
    <string name="menu_attendance">Attendance</string>
    <string name="menu_gender">Gender</string>
    <string name="menu_timetable">Timetable</string>
    <string name="class">Class of 2019</string>
    <string name="class_of_2019">Class of 2019</string>
    <string name="email_ctit2019">Email</string>
    <string name="email_stit_2019">ctit2019@gmail.com</string>
    <string name="text_this">Welcome to ctit class of 2019</string>
    <string name="todo">TODO</string>
</resources>